<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="menu_action_setting">Settings</string>
    <string name="menu_action_about_us">About us</string>
    <string name="button_previous"><![CDATA[<<]]></string>
    <string name="button_play"><![CDATA[>]]></string>
    <string name="button_next"><![CDATA[>>]]></string>
    <string name="button_repeat">R</string>
    <string name="button_shuffle">S</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="album_image">Album image</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="Artists">Artists</string>
    <string name="action_newPlaylist">New playlist</string>
    <string name="playlistName">Playlist name</string>
    <string name="menu_action_add_queue">Add to queue</string>
    <string name="menu_action_add_playlist">Add to playlist</string>
    <string name="menu_action_delete_song">Delete song</string>
    <string name="menu">Menu</string>
</resources>
